--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install sounddevice numpy SpeechRecognition pyaudio pyinstaller
+        pip install -r requirements.txt
     
     - name: Create directories
       run: |
